# rookForge

./: Cargo.toml  EXECUTION_STATUS.md  Makefile  PROJECT_PLAN.md  README.md
.github/workflows/: rust.yml
crates/rookforge-cli/: Cargo.toml
crates/rookforge-cli/src/: main.rs
crates/rookforge-cli/tests/: cli.rs
crates/rookforge-core/: Cargo.toml
crates/rookforge-core/src/: board.rs  eval.rs  lib.rs  movegen.rs  search.rs  uci.rs
docs/architecture/: 0001-project-direction.md
docs/devlog/: day-001.md  day-002.md  day-003.md  day-004.md  day-005.md  day-006.md  day-007.md  day-008.md  day-009.md  day-010.md  day-011.md  day-012.md  day-013.md
scripts/: local-check.sh
