[package]
name = "rookforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line interface for the Rookforge chess engine."
publish = false

[[bin]]
name = "rookforge"
path = "src/main.rs"

[dependencies]
rookforge-core = { path = "../rookforge-core" }

